# AI-Auto-TCAD

./: .database  .gitignore  .history  .status  @log_des.xml  BV_des.cmd  BV_des.cmd~  FS_IGBT_dvs.cmd  FS_IGBT_dvs.cmd~  HeavyIon_des.cmd~  INTEGRATED_USER_GUIDE.md  IcVc_des.cmd  IcVc_des.cmd~  IcVg_des.cmd  IdVd_des.cmd~  IdVg_des.cmd~  LICENSE  MCT_Strct_des.cmd~  MCT_Struct_dvs.cmd~  MathSection_des.cmd  PlotBV_vis.tcl  PlotIcVc_vis.tcl  PlotIcVg_vis.prf  PlotIcVg_vis.tcl  PlotSection_des.cmd  PlotTransient_vis.tcl  README.md  README_ENV_SETUP.md  README_siliconflow.md  SVisualTcl.log.BAK  Transient_des.cmd  add_experiment.py  api_test_report.md  auto_sim_config.json  auto_sim_config.json.bak  check_node_status.py  clean_redundant.sh  cmlog.txt  error_chat_v1_markdown_20250417_092417.txt  fs-igbt-gui.sh  (+64 more)
Knowledge/: UI_Problem_Solve.txt
Reports/: report_iteration_10_20250421_195511.md  report_iteration_10_20250421_215325.md  report_iteration_1_20250421_061705.md  report_iteration_1_20250421_131047.md  report_iteration_1_20250421_180830.md  report_iteration_1_20250421_181115.md  report_iteration_1_20250421_181349.md  report_iteration_1_20250421_184332.md  report_iteration_1_20250421_184350.md  report_iteration_1_20250421_184929.md  report_iteration_1_20250421_190925.md  report_iteration_1_20250421_191434.md  report_iteration_1_20250421_194900.md  report_iteration_1_20250421_195003.md  report_iteration_1_20250421_195053.md  report_iteration_1_20250421_201019.md  report_iteration_1_20250421_201131.md  report_iteration_1_20250421_204348.md  (+65 more)
auto_sim/: __init__.py  (+15 more)
(+35 files in other folders)
