[metadata]
name = AI-Auto-TCAD
version = 0.1.0
author = 760340753
author_email = 760340753@qq.com
description = 通用 Sentaurus 自动仿真优化工具
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/760340753/AI-Auto-TCAD
classifiers =
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.11
install_requires =
    PySimpleGUI>=4.60.5

[options.entry_points]
console_scripts =
    fs-sim-install = fs_auto_sim.cli:install
    fs-sim-ui = fs_auto_sim.cli:ui
    fs-sim-console = fs_auto_sim.cli:console 